NEW254890
jsValue is checked AFTER calling its undefined method
https://bugs.webkit.org/show_bug.cgi?id=254890
Summary jsValue is checked AFTER calling its undefined method
Seija K.
Reported 2023-04-02 08:29:11 PDT
The check for the jsValue being null MUST come first, otherwise the check is useless.
Attachments
Radar WebKit Bug Importer
Comment 1 2023-04-09 08:30:15 PDT
Mark Lam
Comment 2 2023-04-10 09:43:06 PDT
Please provide more detail as to where in the code this check exist. Otherwise, this bug is not useful nor actionable.
Note You need to log in before you can comment on or make changes to this bug.