JavaScriptCore: Check for jsValue first before checking for isUndefined https://bugs.webkit.org/show_bug.cgi?id=254890

Reviewed by NOBODY (OOPS!).

jsValue is being evaluated AFTER the call to isUndefined,
which at that point, the jsValue check is either useless
or in the wrong spot.

* Source/JavaScriptCore/API/JSValueRef.cpp:
  (JSValueGetType): Move jsValue check to be before the
  undefined check.